--- a/Exercism/swift/.gitignore
+++ b/Exercism/swift/.gitignore
@@ -2,6 +2,7 @@
 .exercism
 
 # Xcode
+
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
@@ -47,7 +48,7 @@ playground.xcworkspace
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
